--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="TxPAHeading">I am in need of the following permissions:</string>
     <string name="TxPAReadExternalStorage">READ_EXTERNAL_STORAGE</string>
     <string name="TxPARESDescription">Needed for reading layout file</string>
+    <string name="TxPAWriteExternalStorage">WRITE_EXTERNAL_STORAGE</string>
+    <string name="TxPAWESDescription">Needed for outputting CSV file</string>
     <string name="TxGrant">Grant Permissions</string>
     <string name="TxTrue">True</string>
     <string name="TxFalse">False</string>
