Floating Action Button replaced with buttons at bottom of screen.
Linear layout instead of relative layout for phase layouts.

Some other tweaks that I cannot think of.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="txABMatch">Match: </string>
     <string name="txABTeam">Team: </string>
     <string name="txABNextPhase">Next Phase</string>
+    <string name="txABNextMatch">Next Match</string>
 
     <string-array name="alliance_array">
         <item>Blue Alliance</item>
